# Estroengine

./: .gitignore  CMakeLists.txt  Estroassets.cpp  Estrocolors.cpp  Estrocolors.h  Estrodefs.h  Estroengine.cpp  Estroengine.h  Estroimpl.cpp  Estroimpl.h  Estrolist.h  Estrovector.cpp  Estrovector.h  README.md  estroengine.hpp  makedocs.bat  makeopendocs.bat  opendocs.bat
.github/: FUNDING.yml
include/: Doxyfile  Estroassets.h  Estrocolors.h  Estrodefs.h  Estroengine.h  Estroextras.h  Estroframework.h  Estroimpl.h  Estroinput.h  Estrolist.h  Estronodes.h  Estrotypes.h  Estrovector.h  docs.dox  estrocolors.hpp  estroextras.hpp  estroinput.hpp  estropathing.hpp  estrotypes.hpp  estrovector.hpp
include/backends/: generic-estro.hpp  raylib-estro.hpp  sfml-estro.hpp
src/: Estroassets.cpp  Estrocolors.cpp  Estroengine.cpp  Estroextras.cpp  Estroimpl.cpp  Estroinput.cpp  Estronodes.cpp  Estrotypes.cpp  Estrovector.cpp
src/backends/SFML/: Estroassets-SFML.cpp  Estroframework.cpp  Estroimpl-SFML.cpp  Estroimpl.cpp
